[gd_scene load_steps=2 format=3 uid="uid://c725emdf400vl"]

[ext_resource type="Script" path="res://scripts/ambient_sounds.gd" id="1_ykkao"]

[node name="AmbientSounds" type="Node3D"]
script = ExtResource("1_ykkao")

[node name="LeftEar" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
autoplay = true
max_polyphony = 2

[node name="RightEar" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
autoplay = true

[node name="RRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, -1)

[node name="RRayCast3D2" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, 1)

[node name="LRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, -1)

[node name="LRayCast3D2" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 1)
